--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -288,6 +288,8 @@
   result: Wear
   allowalt:
     - Dress
+    - Attire
+    - Worn
   badtrans: true
   context: Refers to the act of dressing or the attire one wears.
 - raw: 境界
