--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -86,13 +86,13 @@
   transliteration: Liúpài
 
 # Difficulties
-- raw: 爽文江湖 
+- raw: 爽文江湖
   result: Light Jianghu
   badtrans: true
-- raw: 爽文江湖 
+- raw: 险恶江湖
   result: Dangerous Jianghu
   badtrans: true
-- raw: 爽文江湖 
+- raw: 真实江湖
   result: Authentic Jianghu
   badtrans: true
  
