--- a/Files/Glossary.yaml
+++ b/Files/Glossary.yaml
@@ -176,6 +176,13 @@
   badtrans: true
   literal: Wàn zōng
 
+# Time
+- raw: 秒  
+  result: Second  
+  badtrans: true  
+  direct: Second  
+  literal: Miao 
+
 # Dates
 - raw: 年  
   result: Year 
